[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webui2"
version = "2.3.0.0"
authors = [
  { name="Hassan Draga" },
]
description = "Use any web browser as GUI"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/alifcommunity/webui"
"Bug Tracker" = "https://github.com/alifcommunity/webui/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
webui = ["*.dll", "*.so", "*.dyn"]
